--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "axios": "^1.5.1",
+    "lottie-web": "^5.12.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
